{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 29,
  "lineage": "798970ad-3936-bd5f-9473-e559e7e688db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b76dcfd8d61bed1",
            "arn": "arn:aws:ec2:us-east-1:727646499790:elastic-ip/eipalloc-03b76dcfd8d61bed1",
            "association_id": "eipassoc-0f3a03d0526827085",
            "domain": "vpc",
            "id": "eipalloc-03b76dcfd8d61bed1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0120b09ae1db2eb2a",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_ip": "10.0.1.119",
            "public_dns": "ec2-100-29-238-142.compute-1.amazonaws.com",
            "public_ip": "100.29.238.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-nat-eip",
              "Project": "enterprise-eks-security-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-nat-eip",
              "Project": "enterprise-eks-security-platform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:internet-gateway/igw-00a7d011b90493563",
            "id": "igw-00a7d011b90493563",
            "owner_id": "727646499790",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-igw",
              "Project": "enterprise-eks-security-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-igw",
              "Project": "enterprise-eks-security-platform"
            },
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b76dcfd8d61bed1",
            "association_id": "eipassoc-0f3a03d0526827085",
            "connectivity_type": "public",
            "id": "nat-0f88609e0f803137d",
            "network_interface_id": "eni-0120b09ae1db2eb2a",
            "private_ip": "10.0.1.119",
            "public_ip": "100.29.238.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bcc708f067186219",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-nat-gateway",
              "Project": "enterprise-eks-security-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-nat-gateway",
              "Project": "enterprise-eks-security-platform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074bae9691c64b0ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f88609e0f803137d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074bae9691c64b0ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a7d011b90493563",
            "id": "r-rtb-0c41a1d43bedca3c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c41a1d43bedca3c6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:route-table/rtb-074bae9691c64b0ef",
            "id": "rtb-074bae9691c64b0ef",
            "owner_id": "727646499790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f88609e0f803137d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-private-route-table",
              "Project": "enterprise-eks-security-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-private-route-table",
              "Project": "enterprise-eks-security-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:route-table/rtb-0c41a1d43bedca3c6",
            "id": "rtb-0c41a1d43bedca3c6",
            "owner_id": "727646499790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a7d011b90493563",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-public-route-table",
              "Project": "enterprise-eks-security-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-public-route-table",
              "Project": "enterprise-eks-security-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe9e6aa11dc3494f",
            "route_table_id": "rtb-074bae9691c64b0ef",
            "subnet_id": "subnet-08b1be754acf2762a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053c501ac5f214982",
            "route_table_id": "rtb-074bae9691c64b0ef",
            "subnet_id": "subnet-02d7dfbf4d6980037"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d22a56315514973",
            "route_table_id": "rtb-0c41a1d43bedca3c6",
            "subnet_id": "subnet-0bcc708f067186219"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acdc2b8239260bbc",
            "route_table_id": "rtb-0c41a1d43bedca3c6",
            "subnet_id": "subnet-0f71a21d7f03d74f2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:subnet/subnet-08b1be754acf2762a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b1be754acf2762a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646499790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-private-1",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-private-1",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:subnet/subnet-02d7dfbf4d6980037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d7dfbf4d6980037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646499790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-private-2",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-private-2",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:subnet/subnet-0bcc708f067186219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcc708f067186219",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646499790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-public-1",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-public-1",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:subnet/subnet-0f71a21d7f03d74f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f71a21d7f03d74f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646499790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-public-2",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-public-2",
              "Project": "enterprise-eks-security-platform",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e08160add44c5955"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646499790:vpc/vpc-0e08160add44c5955",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a53965cfd44aead",
            "default_route_table_id": "rtb-0a71b92a4ee178774",
            "default_security_group_id": "sg-05f11ec6053e41573",
            "dhcp_options_id": "dopt-01c9efb07b973f19d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e08160add44c5955",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a71b92a4ee178774",
            "owner_id": "727646499790",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-vpc",
              "Project": "enterprise-eks-security-platform"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "enterprise-eks-security-platform-vpc",
              "Project": "enterprise-eks-security-platform"
            }
          }
        }
      ]
    }
  ]
}